--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
-%section#blueprint-image{:style => "text-align: center"}
+%section#blueprint-image
   = image_tag "temp_images/rocket.png"
 %section#tagline
   %article
