--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,155 +1,132 @@
 @import "compass/reset";
 @import "common";
+@import "grid";
 
 body {
-    background: image-url('/assets/background-tile.jpg') $gray;
-    background-position: 0px 101px;
+
 }
 
-em { color: $dark-orange; }
+em {
+
+}
 
 section, div, span, p {
-    font-family: Arimo;
-    color: $silver;
+
 }
 
 ul, ol {
-    color: $silver;
-    margin: 10px 0 10px 20px;
+
 }
 
 ol {
-    list-style-type: decimal;
+
 }
 
 ul {
-    list-style-type: square;
+
 }
 
 li {
-    @include article-text;
+
 }
 
 p {
-    line-height: 1.5em;
+
 }
 
 h1, h2, h3, h4, h5, h6 {
-    margin: 10px 0;
+
 }
 
 #canvas {
-    width: 100%;
-    height: 100%;
+
 }
 
 #header-wrapper {
-    background: image-url('/assets/curve.png') repeat-x;
-    width: 100%;
-    z-index: 100;
-    position: relative;
+
 }
 
 header {
-    @include centered;
-    height: $header-height;
-    padding: 20px 0;
-    h1 {
-        float: left;
-    }
-}
 
-nav#main {
-    float: right;
-    margin-top: 20px;
-    ul { list-style-type: none; }
-    li {
-        float: left;
-        &:last-child a { border-right: none; }
-        }
-    a {
-        @include nav-text;
-        display: block;
-        height: 25px;
-        padding: 0 15px;
-        border-right: 2px solid $blue;
-    }
 }
 
 #content-wrapper {
-    background: image-url('/assets/background-top.jpg') repeat-x;
+
 }
 
 #content {
-    @include centered;
-    margin-top: -40px;
-    padding-bottom: 50px;
-    position: relative;
-    z-index: 0;
+
 }
 
 footer {
-    @include centered;
-    @include footer-text;
-    a { @include footer-link-text }
+
+    a {
+
+    }
     h3 {
-        @include footer-header-text;
+
     }
     h4 {
-        @include footer-subheader-text;
-        margin: 0 0 10px 0;
+
     }
     #contact {
-        @include column(22);
+
     }
     #careers {
-        @include column(8, true);
+
     }
-    li { margin: 5px 0; }
-    p { margin: 10px 0; }
+    li {
+    }
+    p {
+    }
     section, span, p {
-        color: $light-gray;
+
     }
 }
 
-#content-footer { @include clearfix; }
+#content-footer {
+
+}
 
 @include sticky-footer(180px, "#content-canvas", "#content-footer", "footer");
 
 #charlottesville, #boulder {
     span {
-        display: block;
-        margin: 5px 0;
+
     }
 }
 
-#email { @include column(4) }
-#charlottesville { @include column(6) }
-#boulder { @include column(6, true) }
-#twitter_img { vertical-align: middle; }
+#email {
+  @include column(4)
+}
+#charlottesville {
+  @include column(6)
+}
+#boulder {
+  @include column(6)
+}
+#twitter_img {
 
-#logo {
-    text-indent: -9999em;
-    display: block;
-    width: 200px;
-    height: 61px;
-    background: image-url('/assets/logo.png') no-repeat;
 }
 
 section.primary, section.secondary {
-    padding-top: 50px;
-    h2 { @include header-text; }
-    h3 { @include sub-header-text; }
-    h4 { @include lowercase-header-text; }
-    min-height:400px;
+    h2 {
+
+    }
+    h3 {
+
+    }
+    h4 {
+
+    }
+
     a {
-        color: $light-orange;
-        font-weight: bold;
+
     }
     em {
-        color: $gold;
+
     }
-    line-height: 1.2em
+
 }
 
 a {
@@ -160,14 +137,9 @@ a {
 }
 
 .wall-of-text {
-    width: 700px;
-    margin-top: 1.5em;
-    margin-left: 2em;
-    background-color: rgba(0, 0, 0, 0.1);
-    padding: 2em 2em 1em 2em;
+
 }
 
 .section-title {
-    font-size: large;
-    font-weight: bold;
+
 }
