--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,14 +11,15 @@
     = render "layouts/disqus_dev_mode" if Rails.env.development? || Rails.env.test?
     = auto_discovery_link_tag :atom, "/feed"
     = favicon_link_tag
-  %body{:class => body_class}
-    %section#content-canvas
-      #header-wrapper
-        - if admin_signed_in?
-          = render "layouts/admin_menu"
-        = render "layouts/header"
-      #content-wrapper
-        %section#content
-          = yield
-        #content-footer
-    = render "layouts/footer"
+  %body
+    .center
+      %section
+        #header-wrapper
+          - if admin_signed_in?
+            = render "layouts/admin_menu"
+          = render "layouts/header"
+        #content-wrapper
+          %section#content
+            = yield
+          #content-footer
+      = render "layouts/footer"
