clean up layout more, make first version of link buttons - getting close to needing images and fonts

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -1,11 +1,12 @@
 @import "compass/css3";
 @import "compass/layout";
 
-$gray: #38383A;
+$gray: #969595;
 $light-gray: #97979b;
 $medium-gray: #525357;
 
 $blue: #1588c3;
+$dark-blue: #004264;
 $very-pale-blue: #E3E3FF;
 $green: #afcf45;
 $purple: #c64791;
