--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,13 +1,17 @@
 %section#blueprint-image
   = image_tag "temp_images/rocket.png"
 %section#tagline
-  %article
+  %h1
     From Idea to Execution
   #tagline-body
-    Here at Coshx we take complex problems and turn them into simple solutions. Our highly skilled team of programmers and designers will take your product to the next level. We love sending those rockets to the moon - why not let us launch a rocket of a product for you  
+    Here at Coshx we take complex problems and turn them into simple solutions. Our highly skilled team of programmers and designers will take your product to the next level. We love sending those rockets to the moon - why not let us launch a rocket of a product for you?
 
-  .button-link{:style => "font-size:50%"}
-    Read about how we build for the web
+  .clearfix
+
+  #how-we-build.button-link
+    %a{:href => "#"} Read about how we build for the web
+
+.clearfix
 
 #features
   %section#startups
