update the fonts a lot, start re-arranging the center items under the big picture - question: is there a way to get rid of the .clearfix divs? adding .clearfix to another element doesn't quite seem to do it right

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -23,7 +23,23 @@ $gold: #d6c29c;
 //$feature-height: 450px;
 
 @mixin centered {
-    margin: 0 auto;
+  margin: 0 auto;
+}
+
+@mixin pt-sans-bold {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: bold;
+}
+
+@mixin pt-sans {
+  font-family: 'PT Sans', sans-serif;
+}
+
+@mixin solid-thick-top {
+  border-top: 2px $blue solid;
+}
+
+@mixin solid-thin-bottom {
 
 }
 
