--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,9 +11,9 @@
   %nav#main
     %ul#nav-list
       -# TODO: fix links depending on how we arrange the site - one big site or multiple small ones 
-      %li=link_to "Home", "#"
-      %li=link_to "About Us", :about
-      %li=link_to "Our Projects", "#projects"
-      %li=link_to "Our Services", :services
-      %li=link_to "Our Blog", :blog_posts
-      %li=link_to "Contact Us", "#contact"
+      %li=link_to "HOME", "#"
+      %li=link_to "ABOUT US", :about
+      %li=link_to "OUR PROJECTS", "#projects"
+      %li=link_to "OUR SERVICES", :services
+      %li=link_to "OUR BLOG", :blog_posts
+      %li=link_to "CONTACT US", "#contact"
