--- a/app/views/layouts/_fonts.html.haml
+++ b/app/views/layouts/_fonts.html.haml
@@ -1,3 +1,2 @@
-= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Arimo"
-= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Syncopate"
 = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Droid+Sans+Mono"
+= stylesheet_link_tag "http://fonts.googleapis.com/css?family=PT+Sans:400,700|Droid+Serif"
