--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,21 +1,21 @@
-%div{:class => 'vcard'}
+%div
   %h3
     -if preview
       =link_to post.title, blog_post_path(post)
     -else
       =post.title
-  %div{:class => 'title'}
+  %div
     - if post.published?
       %em=post.posted_on.strftime("%B %e, %Y")
     - else
       %em="Draft"
   %br
   .post-info-wrapper
-    .post-author-image=image_tag Gravatar.new(post.author.email).image_url(:size => '49'), :class => 'photo'
+    =image_tag Gravatar.new(post.author.email).image_url, :class => 'photo'
     .post-info
-      %div{:class =>'org'}
+      %div
         Coshx Labs
-      %div{:class =>'fn'}
+      %div
         = 'by '+post.author.name
   - if preview
     .post-body=preserve post.preview_html.html_safe
