--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -158,6 +158,33 @@
   .header .callout-link {
     width: 133px;
   }
+
+  .client-row {
+
+    .client-logo {
+      float: left;
+      background: $blue;
+      border: 1px black solid;
+      width: 158px;
+      height: 148px;
+
+
+      img {
+        /*
+        * NOTE:
+        * vertically centering things in CSS is a disaster, so we're going to make the following restrictions on
+        * client logo images:
+        * 1) the width must be 150px or less (we can center horizontally without much trouble, so we have flexibility here)
+        * 2) the height *MUST* be 100px. No variation. Pad it out with transparent pixels. Then we can just put a margin-top on the images and they'll 'magically' vertically center
+        */
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        vertical-align: middle;
+        margin-top: 24px;
+      }
+    }
+  }
 }
 
 //#startups {
