update styles and layout to mix & match our stuff with Gil's

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -2,6 +2,7 @@
 @import "common";
 @import "grid";
 
+/*
 @mixin rounded-button {
   @include border-radius(4px);
   padding: 5px 10px;
@@ -171,3 +172,4 @@ a {
 .section-title {
 
 }
+*/
