--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -11,6 +11,7 @@ normal text is droid Serif 14pt
 button links are PT Sans 12pt
 */
 
+/*
 body {
   background-image: image-url("tile_background.png");
   background-repeat: repeat;
@@ -100,3 +101,5 @@ nav#main {
     height: 100px;
     background: image-url('/assets/logo.png') no-repeat;
 }
+
+*/
