--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -8,7 +8,343 @@
 @import "compass/css3";
 @import "grid";
 
+html {
+  border-top: 6px solid #000;
+  border-left: 6px solid #000;
+  border-right: 6px solid #000;
+}
 
+body {
+  background: transparent image-url("tile_background.png");
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+
+* {
+  html .clearfix, &:first-child+html .clearfix {
+    zoom: 1;
+  }
+}
+
+/* IE6 */
+/* IE7 */
+
+.w960 {
+  width: 960px;
+  margin: 0px auto;
+}
+
+header {
+  position: relative;
+}
+
+#logo {
+  width: 169px;
+  height: 100px;
+  background: transparent image-url("logo.png") no-repeat;
+  display: block;
+  margin-top: 20px;
+}
+
+#ribbon {
+  width: 50px;
+  height: 117px;
+  background: transparent image-url("ribbon.png") no-repeat;
+  position: absolute;
+  display: block;
+  right: 0px;
+  top: -30px;
+  text-align: center;
+  a {
+    display: block;
+    margin-top: 15px;
+  }
+}
+
+nav {
+  border-top: 2px solid #1588c3;
+  border-bottom: 1px solid #1588c3;
+  margin: 24px auto 30px !important;
+
+  ul {
+    list-style: none;
+    font: 14px / 24px "PT Sans", sans-serif;
+    li {
+      float: left;
+      padding: 18px 42px;
+      background: transparent image-url("menu-border.png") 100% 9px no-repeat;
+      &:last-child {
+        background: none;
+      }
+      a {
+        color: #FFF;
+        text-transform: uppercase;
+        text-decoration: none;
+        &:hover, &.selected {
+          color: #1588c3;
+        }
+      }
+    }
+  }
+}
+
+#blueprint-wrapper {
+  margin: 0px auto 10px;
+  width: 387px;
+  height: 438px;
+  position: relative;
+
+  a {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    background: image-url("add-button.png") no-repeat;
+
+    &.point1 {
+      left: 155px;
+      top: 73px;
+    }
+    &.point2 {
+      left: 120px;
+      top: 213px;
+    }
+    &.point3 {
+      left: 235px;
+      top: 230px;
+    }
+    &.point4 {
+      left: 131px;
+      top: 321px;
+    }
+  }
+}
+
+section#blueprint-image {
+  text-align: center;
+  padding-bottom: 75px;
+  h1 {
+    color: #FFF;
+    font: bold 48px 'PT Sans', sans-serif;
+    text-transform: uppercase;
+  }
+  p {
+    color: #969595;
+    font: 14px / 24px "Droid Serif", serif;
+    margin: 22px 0px;
+  }
+}
+
+.blue-arrow {
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  display: inline-block;
+  padding: 4px 40px 4px 15px;
+  background: image-url("arrow_blue_btn.png") no-repeat scroll 96% 9px #1588c3;
+  color: #004264;
+  text-decoration: none;
+  font: 12px 'PT Sans', sans-serif;
+  &:hover {
+    background: image-url("arrow_blue_btn.png") no-repeat scroll 96% 10px white;
+  }
+}
+
+section {
+  &#features ul {
+    border-top: 2px solid #1588c3;
+    border-bottom: 2px solid #1588c3;
+
+    li {
+      float: left;
+      width: 210px;
+      background: image-url("services-border.png") 100% 0px no-repeat;
+      padding: 0px 55px;
+      text-align: center;
+      margin: 40px 0px;
+      &:last-child {
+        background: none;
+      }
+      img {
+        &.people {
+          margin: 25px auto 35px;
+        }
+        &.gears {
+          margin: 25px auto;
+        }
+        &.beaker {
+          margin: 15px auto 25px;
+        }
+      }
+      h2 {
+        font: bold 18px 'PT Sans', sans-serif;
+        color: #FFF;
+        text-transform: uppercase;
+      }
+      span.blue {
+        color: #1588c3;
+      }
+      a {
+        margin-bottom: 5px;
+      }
+      p {
+        color: #969595;
+        font: 12px 'Droid Serif', serif;
+        margin-bottom: 30px;
+      }
+    }
+  }
+
+  &#contacts header, &#clients header {
+    overflow: hidden;
+  }
+
+  &#contact-us {
+    text-align: center;
+    padding: 53px 0px;
+    border-bottom: 2px solid #1588c3;
+    h2 {
+      font: bold 18px 'PT Sans', sans-serif;
+      color: #FFF;
+      text-transform: uppercase;
+      margin: 25px 0px;
+    }
+    p {
+      color: #969595;
+      font: 12px 'Droid Serif', serif;
+      margin-bottom: 30px;
+    }
+    a.first {
+      margin-right: 28px;
+    }
+  }
+
+  &#featured-projects {
+    header {
+      background: image-url("projects-border.png") 0px 100% no-repeat;
+      overflow: hidden;
+    }
+    ul {
+      margin-top: 55px;
+    }
+    header {
+      h2 {
+        font: bold 18px 'PT Sans', sans-serif;
+        color: #FFF;
+        text-transform: uppercase;
+        margin: 25px 0px;
+        float: left;
+        padding: 5px 0px 5px 48px;
+        background: image-url("star.png") 0px 0px no-repeat;
+      }
+      a {
+        float: right;
+        margin-top: 30px;
+      }
+    }
+
+    ul {
+      list-style: none;
+      border-bottom: 2px solid #1588c3;
+      li {
+        float: left;
+        img {
+          width: 460px;
+          border: 1px solid #000;
+          -webkit-border-radius: 5px;
+          border-radius: 5px;
+          float: left;
+          margin-right: 18px;
+          margin-bottom: 18px;
+          &.even {
+            margin-right: 0px;
+          }
+        }
+      }
+    }
+  }
+
+  &#our-clients {
+    header {
+      background: image-url("projects-border.png") 0px 100% no-repeat;
+    }
+    ul {
+      margin-top: 55px;
+    }
+    header {
+      h2 {
+        font: bold 18px 'PT Sans', sans-serif;
+        color: #FFF;
+        text-transform: uppercase;
+        margin: 25px 0px;
+        float: left;
+        padding: 5px 0px 5px 48px;
+        background: image-url("star.png") 0px 0px no-repeat;
+      }
+      a {
+        float: right;
+        margin-top: 30px;
+      }
+    }
+    ul {
+      list-style: none;
+      li {
+        float: left;
+        width: 159px;
+        height: 150px;
+        border-right: 1px solid #000;
+        border-bottom: 1px solid #000;
+        float: left;
+        background: #1588c3;
+        line-height: 200px;
+        text-align: center;
+        img {}
+        &.last {
+          border-right: none;
+        }
+        &.bottom {
+          border-bottom: none;
+        }
+      }
+    }
+  }
+}
+
+footer {
+  background: #1588c3;
+  padding-bottom: 200px;
+  margin-top: 170px;
+  position: relative;
+  overflow: hidden;
+}
+
+#footer-nav {
+  position: absolute;
+  left: 50%;
+  margin-left: -69px;
+  top: -56px;
+}
+
+section#footer-content {
+  margin-top: 40px;
+  h2 {
+    color: #FFF;
+    padding-left: 50px;
+    font: bold 18px 'PT Sans', sans-serif;
+    line-height: 32px;
+    background: image-url("blogger.png") 0px 0px no-repeat;
+    text-transform: uppercase;
+    border-bottom: 1px solid #004264;
+    padding-bottom: 20px;
+  }
+}
+
+/*
 .section-title {
   @include pt-sans-header;
 }
@@ -170,13 +506,13 @@
 
 
       img {
-        /*
-        * NOTE:
-        * vertically centering things in CSS is a disaster, so we're going to make the following restrictions on
-        * client logo images:
-        * 1) the width must be 150px or less (we can center horizontally without much trouble, so we have flexibility here)
-        * 2) the height *MUST* be 100px. No variation. Pad it out with transparent pixels. Then we can just put a margin-top on the images and they'll 'magically' vertically center
-        */
+        //
+        // NOTE:
+        // vertically centering things in CSS is a disaster, so we're going to make the following restrictions on
+        // client logo images:
+        // 1) the width must be 150px or less (we can center horizontally without much trouble, so we have flexibility here)
+        // 2) the height *MUST* be 100px. No variation. Pad it out with transparent pixels. Then we can just put a margin-top on the images and they'll 'magically' vertically center
+        //
         display: block;
         margin-left: auto;
         margin-right: auto;
@@ -417,3 +753,5 @@ section#activity-stream {
 .service-title {
 
 }
+
+*/
